# poleval-2022-abbr

./: .gitignore  .gitmodules  README.md  eval.py  gpu-job.sh  mixed_dataset.py  poleval_dataset.py  pyproject.toml  sweep.sh  train.py  voting.py  wiki_dataset.py
configs/: byt5-none-poleval.args  byt5-train-dict.args  byt5-train.args  byt5-wiki-poleval-dev.args  byt5-wiki-poleval.args  byt5-wiki-train-dict.args  byt5-wiki-train.args  byt5-wiki.args  plt5-none-poleval.args  plt5-train-dict.args  plt5-train.args  plt5-wiki-poleval-dev.args  plt5-wiki-poleval.args  plt5-wiki-train-dict.args  plt5-wiki-train.args  plt5-wiki.args
data/: kw.tsv  kw_uniq.tsv
poleval-test/: test-A.csv  test-B.csv
poleval-test/test-A/: expected.tsv
poleval-test/test-B/: expected.tsv
sweeps/: byt5-none-poleval-kw.yaml  byt5-none-poleval.yaml  byt5-wiki-poleval-kw.yaml  byt5-wiki-poleval.yaml  plt5-none-poleval-kw.yaml  plt5-none-poleval.yaml  plt5-wiki-poleval-kw.yaml  plt5-wiki-poleval.yaml
